infra/k8s/dev/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: videoapp
  labels:
    app: videoapp
spec:
  selector:
    matchLabels:
      app: videoapp
  template:
    metadata:
      labels:
        app: videoapp
    spec:
      containers:
      - name: frontend
        image: gcr.io/google-samples/video-app-image:0.1
        ports:
          - containerPort: 80
