infra/k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: videoapp
  labels:
    app: videoapp
spec:
  type: NodePort
  selector:
    app: videoapp
  ports:
  - name: http
    port: 80
    nodePort: 30061
